# aggregator

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Readme.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  aggregator.sln
aggregator/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  aggregator.sln  app.vcxproj  app.vcxproj.filters
aggregator.runner/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  aggregator.runner.sln  aggregator.runner.vcxproj  aggregator.runner.vcxproj.filters
aggregator.runner/src/: main.cpp
aggregator.tests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  aggregator.tests.sln  aggregator.tests.vcxproj  aggregator.tests.vcxproj.filters
aggregator.tests/src/: ConcurrentQueue.cpp  DataAggregator.cpp  DataGenerator.cpp  DataProcessor.cpp
aggregator/src/: ConcurrentQueue.hpp  DataAggregator.hpp  DataGenerator.hpp  DataProcessor.hpp  RandomSizeAndValueVectorGenerator.hpp  VectorGenerator.hpp  main.cpp
